# opencode-viewer

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: CodeBlock.tsx  DbSelector.tsx  Layout.tsx  MessageItem.tsx  MessageList.tsx  ModelPricingConfig.tsx  SessionTree.tsx  StatsView.tsx  ToolCallBlock.tsx  WorkspaceManager.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx
src/hooks/: useMessages.ts  useModelPricing.ts  useProjects.ts  useSessions.ts  useStats.ts  useWorkspaces.ts
src/lib/: model-pricing.ts  session-export.ts  types.ts  utils.ts
