[package]
name = "opencode-viewer"
version = "0.1.0"
description = "OpenCode Viewer - Browse OpenCode sessions"
authors = []
license = ""
repository = ""
default-run = "opencode-viewer"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "opencode_viewer_lib"
crate-type = ["lib"]

[[bin]]
name = "opencode-viewer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"

[features]
# this feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
